[package]
name = "axum_odbc"
version = "0.6.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide an ODBC-Api layer."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_odbc"
keywords = ["Axum", "Tower", "odbc", "odbc-api"]
repository = "https://github.com/AscendingCreations/AxumOdbc"

[features]
iodbc = ["odbc-api/iodbc"]

[dependencies]
axum-core = "0.3.4"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.73"
tracing = "0.1.37"
thiserror = "1.0.49"
http = "0.2.9"
odbc-api = "2.2.0"
once_cell = "1.18.0"
crossbeam-queue = "0.3.8"

[dev-dependencies]
anyhow = "1.0.71"
axum = "0.6.18"

