[package]
name = "axum_odbc"
version = "0.9.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide an ODBC-Api layer."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_odbc"
keywords = ["Axum", "Tower", "odbc", "odbc-api"]
repository = "https://github.com/AscendingCreations/AxumOdbc"

[features]
iodbc = ["odbc-api/iodbc"]

[dependencies]
axum-core = "0.5.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.73"
tracing = "0.1.37"
thiserror = "2.0.9"
http = "1.2.0"
odbc-api = "10.0.0"
once_cell = "1.20.0"
crossbeam-queue = "0.3.12"

[dev-dependencies]
anyhow = "1.0.71"
axum = "0.8.1"

