[package]
name = "axum_odbc"
version = "0.10.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide an ODBC-Api layer."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/axum_odbc"
keywords = ["Axum", "Tower", "odbc", "odbc-api"]
repository = "https://github.com/AscendingCreations/AxumOdbc"

[features]
iodbc = ["odbc-api/iodbc"]

[dependencies]
axum-core = "0.5.2"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
thiserror = "2.0.12"
http = "1.3.1"
odbc-api = "12.0.1"
once_cell = "1.21.1"
crossbeam-queue = "0.3.12"

[dev-dependencies]
anyhow = "1.0.71"
axum = "0.8.1"

